Fixed comment overflow

--- a/frontend/src/shared/components/tasque-comments/tasque-comments.component.sass
+++ b/frontend/src/shared/components/tasque-comments/tasque-comments.component.sass
@@ -65,8 +65,16 @@ tasque-avatar
     padding-left: 14px
     border-left: 1px solid colorscheme(gray-300)
 
+.minus-avatar
+    max-width: calc( 100% - 40px )
+
 .comment-text
-    padding: 5px 0 20px
+  padding: 5px 0 20px
+  max-width: 100%
+  p
+    overflow: hidden
+    overflow-wrap: break-word
+    max-width: 100%
 
 .comment-row
     display: flex
